force-app/main/default/objects/Sector_Master__c/Sector_Master__c.object-meta.xml
<CustomObject>
    <label>Sector Master</label>
    <nameField>
        <label>Sector Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sector Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>