force-app/main/default/objects/Sector_Master__c/fields/Sector_Code__c.field-meta.xml
<CustomField>
    <fullName>Sector_Code__c</fullName>
    <label>Sector Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>