force-app/main/default/objects/Sector_Master__c/fields/Sector_Description__c.field-meta.xml
<CustomField>
    <fullName>Sector_Description__c</fullName>
    <label>Sector Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>