force-app/main/default/objects/Sector_Master__c/fields/Sector_Value__c.field-meta.xml
<CustomField>
    <fullName>Sector_Value__c</fullName>
    <label>Sector Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>